--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
 
     const updates = [
       { 
-        title: "Brunch Article", 
+        title: "사소한 일상", 
         date: "2024년 5월 13일 월요일, 고장 난 천장 팬을 고치다 ", 
-        image: "brunch-image1.jpg", 
-        titleLink: "a.html", 
-        imageLink: "b.html" 
+        image: "image/brunch/20240513_fan1.jpg", 
+        titleLink: "brunch.html", 
+        imageLink: "brunch/diary/brunch sub 20240513_01.html" 
       },
 
       { 
-        title: "AI News Article 1", 
-        date: "May 16, 2024 ", 
-        image: "ai-news-image1.jpg", 
-        titleLink: "c.html", 
-        imageLink: "d.html" 
+        title: "사소한 일상", 
+        date: "2024년 5월 12일 일요일, 딸과 함께한 행복한 골프 데이트", 
+        image: "image/brunch/20240512_golf.jpg", 
+        titleLink: "brunch.html", 
+        imageLink: "brunch/diary/brunch sub 20240512_02.html" 
       }
 
       // ... 더 많은 업데이트 데이터 추가 ...
