--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      padding: 2rem 2rem 2rem 4rem;
+      padding: 2rem 2rem 2rem 2rem; /* Adjusted padding to align left */
     }
 
     section {
