--- a/index.html
+++ b/index.html
@@ -145,11 +145,12 @@
     const updates = [
       { 
         title: "사소한 일상", 
-        date: "2024년 5월 13일 월요일, 고장 난 천장 팬을 고치다 ", 
+        date: "2024년 5월 13일 월요일, 고장 난 천장 팬을 고치다.", 
         image: "image/brunch/20240513_fan1.jpg", 
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240513_01.html" 
       },
+
 
       { 
         title: "사소한 일상", 
@@ -157,7 +158,24 @@
         image: "image/brunch/20240512_golf.jpg", 
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240512_02.html" 
+      },
+
+      { 
+        title: "사소한 일상", 
+        date: "2024년 5월 12일 일요일, 고장 난 포드 에스케이프 헤드라이트 교체하다.", 
+        image: "image/brunch/20240512_lamp1.jpg", 
+        titleLink: "brunch.html", 
+        imageLink: "brunch/diary/brunch sub 20240512_02.html" 
+      },
+
+      { 
+        title: "사소한 일상", 
+        date: "2024년 5월 07일 화요일, 손상된 데크 페인트를 벗겨내다.", 
+        image: "image/brunch/20240507_deck1.jpg", 
+        titleLink: "brunch.html", 
+        imageLink: "brunch/diary/brunch sub 20240507_01.html" 
       }
+
 
       // ... 더 많은 업데이트 데이터 추가 ...
     ];
