--- a/index.html
+++ b/index.html
@@ -174,8 +174,23 @@
         image: "image/brunch/20240507_deck1.jpg", 
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240507_01.html" 
-      }
+      },
 
+      { 
+        title: "사소한 일상", 
+        date: "2024년 5월 04일 토요일, 라일락나무 가지치기를 했더니 앙상해졌다.", 
+        image: "image/brunch/20240504_tree1.png", 
+        titleLink: "brunch.html", 
+        imageLink: "brunch/diary/brunch sub 20240504_02.html" 
+      },
+
+      { 
+        title: "사소한 일상", 
+        date: "2024년4월26일 금요일 (나무도 자연 그대로의 멋이 있지 않을까?)", 
+        image: "image/brunch/20240426 tree.jpg", 
+        titleLink: "brunch.html", 
+        imageLink: "brunch/diary/brunch sub 20240426_02.html" 
+      }
 
       // ... 더 많은 업데이트 데이터 추가 ...
     ];
