--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       { 
         title: "사소한 일상", 
         date: "2024년4월26일 금요일 (나무도 자연 그대로의 멋이 있지 않을까?)", 
-        image: "image/brunch/20240504_tree1.png", 
+        image: "image/brunch/20240426 tree.jpg", 
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240426_02.html" 
       }
