--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#brunch">Brunch</a></li>
-        <li><a href="#ai-news">AI News</a></li>
-        <li><a href="#other-section">Other Section</a></li>
+        <li><a href="main.html">Main</a></li>
       </ul>
     </nav>
   </header>
