--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     }
 
     .update img {
-      width: 300%; /* Set initial image size */
-      height: auto; /* Maintain aspect ratio */
-      max-width: 100%; /* Ensure image doesn't exceed container width */
+      width: 100%; /* 초기 이미지 크기 */
+      height: auto; /* 종횡비 유지 */
+      max-width: 100%; /* 컨테이너 너비를 초과하지 않도록 설정 */
       border-radius: 5px;
       margin: 1rem 0;
     }
@@ -109,13 +109,13 @@
 
     @media (min-width: 768px) {
       .update img {
-        width: 150%; /* Adjust image size for larger screens */
+        width: 50%; /* 큰 화면에서의 이미지 크기 조정 */
       }
     }
 
     @media (min-width: 1024px) {
       .update img {
-        width: 100%; /* Adjust image size for even larger screens */
+        width: 30%; /* 더 큰 화면에서의 이미지 크기 조정 */
       }
     }
   </style>
@@ -189,7 +189,7 @@
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240502_18.html" 
       },
-      
+
       { 
         title: "사소한 일상", 
         date: "2024년4월26일 금요일 (나무도 자연 그대로의 멋이 있지 않을까?)", 
@@ -197,7 +197,7 @@
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240426_02.html" 
       }
-      
+
       // ... 더 많은 업데이트 데이터 추가 ...
     ];
 
