--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
     }
 
     .update img {
-      width: 100%; /* 초기 이미지 크기 */
-      height: auto; /* 종횡비 유지 */
-      max-width: 100%; /* 컨테이너 너비를 초과하지 않도록 설정 */
+      width: 300px; /* 고정 너비 설정 */
+      height: 200px; /* 고정 높이 설정 */
+      object-fit: cover; /* 이미지 비율 유지 및 크기에 맞게 자르기 */
       border-radius: 5px;
       margin: 1rem 0;
     }
-
     .update-content {
       flex: 1;
     }
