--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
     .update img {
       width: 300px; /* 고정 너비 설정 */
-      height: auto; /* 종횡비 유지 */
+      height: 200px; /* 고정 높이 설정 */
+
       object-fit: cover; /* 이미지 비율 유지 및 크기에 맞게 자르기 */
       border-radius: 5px;
       margin: 1rem 0;
