--- a/english.html
+++ b/english.html
@@ -37,61 +37,67 @@
   <meta name="description" content="10년 이상 미국에서 엔지니어로 근무하며 수집한 실용적인 영어 표현들을 상황별로 분류하여 제공합니다. 업무, 이메일, 회의 등 다양한 상황에서 활용할 수 있는 영어 표현을 예문과 함께 학습할 수 있습니다. 미국 엔지니어들의 실제 언어 사용 패턴을 파악하고 영어 실력을 향상시켜 보세요.">
 
   
-<style>
-   body {
-            font-family: Arial, sans-serif;
-            font-size: 2em;
-        }
-
-        header {
-            background-color: #f8f9fa;
-            padding: 20px;
-            text-align: center;
-        }
-
-        main {
-            margin: 20px;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-
-        footer {
-            background-color: #f8f9fa;
-            padding: 20px;
-            text-align: center;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        .update img {
-          width: 100%; /* 초기 이미지 크기 */
-          height: auto; /* 종횡비 유지 */
-          max-width: 100%; /* 컨테이너 너비를 초과하지 않도록 설정 */
-          border-radius: 5px;
-          margin: 1rem 0;
-        }
-
-        @media (min-width: 768px) {
-          .update img {
-            width: 50%; /* 큰 화면에서의 이미지 크기 조정 */
-          }
-        }
-
-        @media (min-width: 1024px) {
-          .update img {
-            w          }
-        }
-  </style>
+  <style>
+    body {
+             font-family: Arial, sans-serif;
+             font-size: 2em;
+             line-height: 1.6;
+             margin: 0;
+             padding: 0;
+         }
+ 
+         header {
+             background-color: #f8f9            padding: 20px;
+             text-align: center;
+         }
+ 
+         main {
+             margin: 2rem auto;
+             max-width: 1200px;
+             padding: 0 1rem;
+             background-color: #fff;
+             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+             border-radius: 5px;
+             padding: 2rem;        }
+ 
+         ul {
+             list-style-type: none;
+             padding: 0;
+         }
+ 
+         li {
+             margin-bottom: 10px;
+             padding: 10px;
+             border: 1p            border-radius: 4px;
+         }
+ 
+         footer {
+             background-color: #f8f9            padding: 20px;
+             text-align: center;
+             width: 100%;
+         }
+ 
+         .update img {
+           width: 100%; /* 초기 이미지 크기 */
+           height: auto; /* 종횡비 유지 */
+           max-width: 100%; /* 컨테이너 너비를 초과하지 않도록 설정 */
+           border-radius: 5px;
+           margin: 1rem 0;
+         }
+ 
+         @media (min-width: 768px) {
+           .update img {
+             width: 50%; /* 큰 화면에서의 이미지 크기 조정 */
+           }
+         }
+ 
+         @media (min-width: 1024px) {
+           .update img {
+             width: 30%; /* 더 큰 화면에서의 이미지 크기 조정 */
+           }
+         }
+   </style>
+ 
 <style>
    .home-button {
     display: inline-block;
