--- a/usa.html
+++ b/usa.html
@@ -134,6 +134,8 @@
             <strong>
                    주택구매 <br><br>
                   </strong>
+                    <a href="usa/usa sub 20240517_02.html" target="_blank">USA News : 세액공제, 공제, 고급 투자 전략 등 세금을 낮추는 방법은 많습니다.</a> <br>
+                    <a href="usa/usa sub 20240517_01.html" target="_blank">Investopedia : 세금은 피할 수 없는 것이지만..</a> <br>
                     <a href="usa/usa sub 20240502_10.html" target="_blank">BankingRates : 미국 부자들이 점점 더 부자가 되는 25개 도시</a> <br>
                     <a href="usa/usa sub 20240502_02.html" target="_blank">Bankrate : 미국 부동산 수수료 체계 새 규정 7월 발효</a> <br>
                     <a href="usa/usa sub 20240502_01.html" target="_blank">CNN : 미국 부동산 수수료 체계 100년만에 뒤바뀌다</a> <br>
