--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
     let isLoading = false;
 
     const updates = [
+    { 
+        title: "미국 생활", 
+        date: "2024년 5월 17일 월요일, 세액공제, 공제, 고급 투자 전략 등 세금을 낮추는 방법은 많습니다.", 
+        image: "image/usa/20240517_401k.webp", 
+        titleLink: "usa.html", 
+        imageLink: "usa/usa sub 20240517_02.html" 
+      },
+
       { 
         title: "사소한 일상", 
         date: "2024년 5월 13일 월요일, 고장 난 천장 팬을 고치다.", 
