--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
     const updates = [
     { 
         title: "미국 생활", 
+        date: "2024년 5월 17일 친구에게 돈을 빌려주지 말아야 하는 5가지 이유", 
+        image: "image/usa/20240517_money4.jpg", 
+        titleLink: "usa.html", 
+        imageLink: "usa/usa sub 20240517_03.html" 
+      },
+    { 
+        title: "미국 생활", 
         date: "2024년 5월 17일 월요일, 세액공제, 공제, 고급 투자 전략 등 세금을 낮추는 방법은 많습니다.", 
         image: "image/usa/20240517_401k.webp", 
         titleLink: "usa.html", 
