--- a/usa.html
+++ b/usa.html
@@ -134,6 +134,7 @@
             <strong>
                    주택구매 <br><br>
                   </strong>
+                    <a href="usa/usa sub 20240517_03.html" target="_blank">친구에게 돈을 빌려주지 말아야 하는 5가지 이유</a> <br>
                     <a href="usa/usa sub 20240517_02.html" target="_blank">USA News : 세액공제, 공제, 고급 투자 전략 등 세금을 낮추는 방법은 많습니다.</a> <br>
                     <a href="usa/usa sub 20240517_01.html" target="_blank">Investopedia : 세금은 피할 수 없는 것이지만..</a> <br>
                     <a href="usa/usa sub 20240502_10.html" target="_blank">BankingRates : 미국 부자들이 점점 더 부자가 되는 25개 도시</a> <br>
