--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     { 
         title: "미국 생활", 
         date: "2024년 5월 17일 친구에게 돈을 빌려주지 말아야 하는 5가지 이유", 
-        image: "image/usa/20240517_money4.jpg", 
+        image: "image/usa/20240517_money1.png", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240517_03.html" 
       },
@@ -199,7 +199,7 @@
       { 
         title: "미국 생활", 
         date: "2020년5월06일 (Harvard Magazine : 미국은 세계에서 가장 높은 수준의 의료비를 지출하고 있습니다.)", 
-        image: "", 
+        image: "image/usa/20240502_Insurance1.png", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240502_18.html" 
       },
