--- a/usa/usa sub 20240502_18.html
+++ b/usa/usa sub 20240502_18.html
@@ -116,7 +116,7 @@
         <p>
         <!-- <img src="../../image/brunch/babyflower.jpg" alt="Baby Flower" width="100%"> -->
 
-        <!-- <img src="../../image/brunch/20240429_bug.jpg" alt="" width="100%"><br><br> -->
+        <img src="../../image/usa/20240502_Insurance1.png" alt="" width="100%"><br><br>
         <span style="color: #2205c9;"><strong>  </strong></span>
 
         미국은 세계에서 가장 높은 수준의 의료비를 지출하고 있습니다. 그러나 이러한 지출에도 불구하고 많은 미국인들은 의료비 부담으로 인해 적절한 치료를 받지 못하고 있으며, 이는 개인의 건강과 삶의 질 뿐 아니라 사회 전반에도 부정적인 영향을 미치고 있습니다. 따라서 미국 의료 시스템 개혁의 필요성이 지속적으로 제기되어 왔습니다.<br><br>
