--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
     let isLoading = false;
 
     const updates = [
+    
+    { 
+        title: "미국 생활", 
+        date: "2024년 5월 18일 구리가격이 상승하는 이유", 
+        image: "image/usa/20240518_copper.png", 
+        titleLink: "usa.html", 
+        imageLink: "usa/usa sub 20240518_01.html" 
+      },
     { 
         title: "미국 생활", 
         date: "2024년 5월 17일 친구에게 돈을 빌려주지 말아야 하는 5가지 이유", 
