--- a/usa/usa sub 20240518_01.html
+++ b/usa/usa sub 20240518_01.html
@@ -114,7 +114,7 @@
             <h2>2024년5월18일 (최근에 구리의 값이 급등하는 이유)</h2>
         
         <p>
-        <!-- <img src="../../image/brunch/babyflower.jpg" alt="Baby Flower" width="100%"> -->
+        <img src="../../image/usa/20240518_copper.png" alt="copper" width="100%">
 
         
         <span style="color: #2205c9;"><strong>  </strong></span>
