--- a/index.html
+++ b/index.html
@@ -140,7 +140,14 @@
     let isLoading = false;
 
     const updates = [
-    
+    { 
+        title: "미국 생활", 
+        date: "2024년 5월 18일 미친 은 (Silver) 가격", 
+        image: "image/usa/20240518_silver.png", 
+        titleLink: "usa.html", 
+        imageLink: "usa/usa sub 20240518_02.html" 
+      },
+
     { 
         title: "미국 생활", 
         date: "2024년 5월 18일 구리가격이 상승하는 이유", 
