--- a/usa.html
+++ b/usa.html
@@ -134,6 +134,7 @@
             <strong>
                    주택구매 <br><br>
                   </strong>
+                    <a href="usa/usa sub 20240518_02.html" target="_blank">미친 은 (Silver) 가격</a> <br>
                     <a href="usa/usa sub 20240518_01.html" target="_blank">구리 가격이 상승하는 이유</a> <br>
                     <a href="usa/usa sub 20240517_03.html" target="_blank">친구에게 돈을 빌려주지 말아야 하는 5가지 이유</a> <br>
                     <a href="usa/usa sub 20240517_02.html" target="_blank">USA News : 세액공제, 공제, 고급 투자 전략 등 세금을 낮추는 방법은 많습니다.</a> <br>
