--- a/usa.html
+++ b/usa.html
@@ -134,10 +134,6 @@
             <strong>
                    주택구매 <br><br>
                   </strong>
-                    <a href="usa/usa sub 20240518_02.html" target="_blank">미친 은 (Silver) 가격</a> <br>
-                    <a href="usa/usa sub 20240518_01.html" target="_blank">구리 가격이 상승하는 이유</a> <br>
-                    <a href="usa/usa sub 20240517_03.html" target="_blank">친구에게 돈을 빌려주지 말아야 하는 5가지 이유</a> <br>
-                    <a href="usa/usa sub 20240517_02.html" target="_blank">USA News : 세액공제, 공제, 고급 투자 전략 등 세금을 낮추는 방법은 많습니다.</a> <br>
                     <a href="usa/usa sub 20240517_01.html" target="_blank">Investopedia : 세금은 피할 수 없는 것이지만..</a> <br>
                     <a href="usa/usa sub 20240502_10.html" target="_blank">BankingRates : 미국 부자들이 점점 더 부자가 되는 25개 도시</a> <br>
                     <a href="usa/usa sub 20240502_02.html" target="_blank">Bankrate : 미국 부동산 수수료 체계 새 규정 7월 발효</a> <br>
@@ -200,6 +196,9 @@
     <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
     </ul>
 
+
+
+
         <ul>
             <li>
             <p>
@@ -218,6 +217,31 @@
     </li>
     <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
     </ul>
+
+
+
+    <ul>
+        <li>
+            <p>
+            <strong>다양한 관심사</strong> <br><br>
+                    <!-- <a href="usa/usa sub 20240518_02.html" target="_blank">미친 은 (Silver) 가격</a> <br> -->
+                    
+                    <a href="usa/usa sub 20240518_02.html" target="_blank"> 하늘을 찌르는 은 가격 </a><br>
+                    <img src="image/usa/20240518_silver.png" alt="Silver cost high" width="842" height="473"><br><br>
+
+                    <a href="usa/usa sub 20240518_01.html" target="_blank">구리 가격이 상승하는 이유</a> <br>
+                    <img src="image/usa/20240518_copper.png" alt="Copper cost high" width="842" height="473"><br><br>
+
+                    <a href="usa/usa sub 20240517_03.html" target="_blank">친구에게 돈을 빌려주지 말아야 하는 5가지 이유</a> <br>
+                    <img src="image/usa/20240517_money1.png" alt="Do not lend money to friend" width="842" height="473"><br><br>
+
+                    <a href="usa/usa sub 20240517_02.html" target="_blank">USA News : 세액공제, 공제, 고급 투자 전략 등 세금을 낮추는 방법은 많습니다.</a> <br>
+                    
+            </p>
+        </li>
+        <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
+        </ul>
+
     </main>
     <main>
         <h2>미시간 관광지</h2>
