--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
     const updates = [
     { 
         title: "미국 생활", 
+        date: "2024년 5월 18일 엄청난 물가", 
+        image: "image/usa/20240518_livingcost.png", 
+        titleLink: "usa.html", 
+        imageLink: "usa/usa sub 20240518_03.html" 
+      },
+
+    { 
+        title: "미국 생활", 
         date: "2024년 5월 18일 미친 은 (Silver) 가격", 
         image: "image/usa/20240518_silver.png", 
         titleLink: "usa.html", 
