--- a/usa.html
+++ b/usa.html
@@ -226,6 +226,9 @@
             <strong>다양한 관심사</strong> <br><br>
                     <!-- <a href="usa/usa sub 20240518_02.html" target="_blank">미친 은 (Silver) 가격</a> <br> -->
                     
+                    <a href="usa/usa sub 20240518_03.html" target="_blank"> 하늘을 찌르는 은 가격 </a><br>
+                    <img src="image/usa/20240518_livingcost.png" alt="living cost" width="842" height="473"><br><br>
+
                     <a href="usa/usa sub 20240518_02.html" target="_blank"> 하늘을 찌르는 은 가격 </a><br>
                     <img src="image/usa/20240518_silver.png" alt="Silver cost high" width="842" height="473"><br><br>
 
