--- a/index.html
+++ b/index.html
@@ -61,14 +61,27 @@
       margin-bottom: 2rem; /* Add margin between updates */
     }
 
-      .update img {
-    width: 100%; /* 이미지 폭을 100%로 설정 */
-    max-width: 600px; /* 최대 폭 설정 */
-    height: auto; /* 종횡비 유지 */
-    object-fit: cover; /* 이미지 비율 유지 및 크기에 맞게 자르기 */
+    .update img {
+    width: 100%;
+    max-width: 1800px; /* 최대 폭을 3배로 증가 */
+    height: auto;
+    object-fit: cover;
     border-radius: 5px;
     margin: 1rem 0;
+  }
+
+  @media (max-width: 1024px) {
+    .update img {
+      max-width: 1200px; /* 1024px 이하에서는 최대 폭을 2배로 조정 */
     }
+  }
+
+  @media (max-width: 768px) {
+    .update img {
+      max-width: 600px; /* 768px 이하에서는 최대 폭을 원래 크기로 조정 */
+    }
+  }
+
     .update-content {
       flex: 1;
     }
