--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 
     const updates = [
     { 
+        title: "AI 로봇", 
+        date: "2024년 5월 19일 휴머로이드 AI 로봇", 
+        image: "image/robot/20240519_robot0.jpg", 
+        titleLink: "robot.html", 
+        imageLink: "robot/usa sub 20240518_03.html" 
+      },
+    { 
         title: "미국 생활", 
         date: "2024년 5월 18일 엄청난 물가", 
         image: "image/usa/20240518_livingcost.png", 
