--- a/robot.html
+++ b/robot.html
@@ -133,6 +133,7 @@
     <ul>
 
         <a href="robot/robot sub 20240501_01.html" target="_blank"> <h3>2024년04월30일 : The robot race is fueling a fight for training data</h3>  </a> 
+        <a href="robot/robot sub 20240519_01.html" target="_blank"> <h3>2024년04월27일 : 8 robots ready to revolutionize work</h3>  </a> 
         <a href="robot/robot sub 20240501_03.html" target="_blank"> <h3>2024년04월04일 : Robot technology</h3>  </a> 
         <a href="robot/robot sub 20240430_01.html" target="_blank"> <h3>2024년03월14일 : "정말 미친 짓"…AI 로봇 '피규어 01'에 전세계 '충격'</h3>  </a> 
         <a href="robot/robot sub 20240430_05.html" target="_blank"> <h3>2024년03월10일 : Figure Promises First General-Purpose Humanoid Robot</h3></a>
