--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         date: "2024년 5월 19일 휴머로이드 AI 로봇", 
         image: "image/robot/20240519_robot0.jpg", 
         titleLink: "robot.html", 
-        imageLink: "robot/usa sub 20240518_03.html" 
+        imageLink: "robot/robot sub 20240519_01.html" 
       },
     { 
         title: "미국 생활", 
