--- a/python.html
+++ b/python.html
@@ -126,7 +126,8 @@
         <h2>유튜브 자동화를 위한 파이썬 스크립트</h2>
         <p>파이썬을 활용하여 유튜브 동영상 다운로드, 자막 추출, 포맷 변환 등 다양한 작업을 자동화할 수 있습니다. 아래 예제 코드를 통해 프로그래밍 초보자도 쉽게 유튜브 자동화에 도전해보세요.</p>
 
-        <a href="python/python sub 0016_WebSearch.txt" target="_blank">20240519 Web Search   <br>
+        <a href="python/python sub 0017_WebSearch.txt" target="_blank">20240519 Web Search   <br>
+        <a href="python/python sub 0016_Screen_Record.txt" target="_blank">20240517 화면 녹화   <br>
         <a href="python/python sub 0015_PPT_to_Excel.txt" target="_blank">20240510 PPT에서 텍스트를 엑셀로 추출   <br>
         <a href="python/python sub 0014_PPT slide to Image.txt" target="_blank">20240510 PPT 슬라이드를 이미지로 변경   <br>    
         <a href="python/python sub 0013_Image_Type_Change.txt" target="_blank">20240508 이미지 타입을 변경하는 기능   <br>
