--- a/robot/robot sub 20240501_01.html
+++ b/robot/robot sub 20240501_01.html
@@ -118,7 +118,9 @@
 
         <!-- <img src="../../image/battery/battery sub 20240429_01.jpg" alt="" width="100%"> -->
 
-        AI의 급격한 발전으로 로봇공학계에 새로운 바람이 불고 있다. 연구자들은 로봇이 익숙지 않은 환경에서도 자유자재로 움직이며 새로운 문제를 해결할 수 있기를 희망한다. 이를 위해서는 로봇 학습에 필요한 대량의 데이터 확보가 시급한 과제로 떠올랐다.<br><br>
+        AI의 급격한 발전으로 로봇공학계에 새로운 바람이 불고 있다.<br>
+        <img src="../../image/robot/robot sub 20240501_01.webp" alt="" width="100%">
+        연구자들은 로봇이 익숙지 않은 환경에서도 자유자재로 움직이며 새로운 문제를 해결할 수 있기를 희망한다. 이를 위해서는 로봇 학습에 필요한 대량의 데이터 확보가 시급한 과제로 떠올랐다.<br><br>
         그러나 기존 언어모델 학습에 사용되는 텍스트, 이미지, 영상 데이터와 달리 로봇 학습용 데이터는 수집하기가 훨씬 어렵고 많은 시간과 비용이 소요된다. 이에 업계 선두주자들은 다양한 방식으로 데이터 수집에 나서고 있다.<br><br>
         Toyota Research Institute에서는 연구원들이 직접 로봇 팔을 조작해 시연 데이터를 만들어내고 있으며, 스탠포드대학교에서는 저렴한 그리퍼를 개발해 일상생활에서 데이터를 수집하는 시도를 하고 있다. 구글 딥마인드를 포함한 13개 기관이 협력하여 만든 DROID 데이터셋은 로봇 간 데이터 공유를 통해 데이터 수집 과정을 단축시켰다.<br><br>
         방대한 고객을 보유한 Covariant 등 민간기업들은 자사 로봇을 활용해 끊임없이 데이터를 축적하는 이점을 누리고 있다. 이들은 다양한 환경에서 수집한 데이터를 바탕으로 강력한 기반모델을 구축하는 중이다.<br><br>
