--- a/robot/robot sub 20240501_03.html
+++ b/robot/robot sub 20240501_03.html
@@ -119,13 +119,15 @@
         <!-- <img src="../../image/battery/battery sub 20240429_01.jpg" alt="" width="100%"> -->
 
         로봇은 인간의 노력을 대체하는 자동화된 기계를 말하며, 반드시 인간과 똑같은 모습이나 기능을 가질 필요는 없다. 로봇공학은 로봇의 설계, 제작, 운용을 다루는 공학의 한 분야이다. 로봇이라는 단어는 체코어 '로보타'에서 유래했으며, 로보틱스라는 용어는 아이작 아시모프의 SF 소설에 처음 등장했다. 아시모프는 유명한 로봇 3원칙을 제시했는데, 이는 로봇이 인간에게 해를 가해서는 안 되고, 인간의 명령에 복종해야 하며(단, 1원칙에 위배되지 않는 선에서), 자기 자신을 보호해야 한다는 내용이다.<br><br>
-1970년 일본의 로봇공학자 마사히로 모리는 인간과의 유사성이 증가함에 따라 호감도가 증가하다가 어느 순간 급격히 떨어지는 '불쾌한 골짜기(uncanny valley)' 현상을 제안했다. 이에 따르면 인조물의 유사성이 계속 높아지면 어느 순간 호감도가 떨어지면서 섬뜩함을 느끼게 되는데, 실제 인간과 같은 수준에 도달하면 호감도가 다시 상승한다는 것이다.<br><br>
-최초의 산업용 로봇은 1954년 미국의 엔지니어 조지 데볼이 개발한 프로그래밍 가능한 유압식 로봇 팔 '유니메이트(Unimate)'였다. 1961년 유니메이션 사는 세계 최초의 산업용 로봇을 GM 공장에 공급했다. 1960-70년대에는 MIT와 스탠포드대에서 센서와 카메라를 활용한 보다 정교한 로봇 팔과 눈-손 협응 시스템을 연구했다. 초기에는 미국 기업이 산업용 로봇 시장을 주도했으나 1980년대 중반 이후 일본과 유럽 기업들이 로봇 산업을 선도하게 되었다.<br><br>
-장난감 로봇은 오래전부터 존재해 왔지만, 1980-90년대에 들어서면서 마이크로프로세서를 탑재해 소리나 빛에 반응하고 음성을 인식하는 장난감 로봇이 인기를 끌었다. 1999년에는 소니가 강아지 모양의 로봇 아이보(AIBO)를 선보였는데, 20여개의 모터와 마이크, 카메라를 이용해 매우 생동감 있게 움직였다.<br><br>
-로봇공학과 인공지능(AI) 분야의 연구는 밀접한 관련이 있다. 초기에는 기하학적 추론을 통해 로봇이 사물을 인식하고 동작을 계획하게 하려 했으나, 예측 못한 변수 때문에 자주 실패했다. 1980년대 중반 브룩스는 로봇에 내부 모델을 만들지 않고 단순한 감각-운동 연결만으로 곤충 같은 행동 패턴을 만들어냈다. 그러나 이는 소형 로봇에 국한된 것이었다.<br><br>
-이후 연구자들은 다양한 기술을 통해 로봇이 주변 환경을 파악하고 자신의 움직임을 인식, 추적하는 방법을 모색했다. 특히 축구 로봇 대회인 로보컵은 이런 연구에 활기를 불어넣었다. 1990년대 고성능 마이크로프로세서 등장으로 대량의 센서 정보를 통계적으로 분석하거나, 자동 학습을 통해 상황을 판단하고 행동하는 기술이 발전했다.<br><br>
-앞으로는 주변 환경을 인식하고 간단한 집안일을 수행하는 다목적 로봇이 개발될 것으로 보인다. 2030년경에는 훈련 가능한 쥐 수준의 지능을, 2040년경에는 원숭이 수준의 인지 능력을 가진 로봇이 등장할 수 있다. 21세기 중반에는 일반화와 추상화가 가능한 인간 수준의 로봇도 가능할 것으로 기대된다. 연구자들은 강력한 추론 프로그램을 3세대 로봇에 결합해 이를 구현하려 하고 있다.<br><br>
-로봇기술의 발전은 인류에게 편의를 가져다줄 것이지만, 일자리 감소, 프라이버시 침해, 군사적 오용 등 여러 문제를 야기할 수 있어 사회적, 윤리적 논의가 필요하다. 미래의 로봇은 단순한 도구가 아니라 인간과 공존하며 소통하는 지적 동반자로 자리매김할 것이다. 우리는 로봇과 함께할 미래를 슬기롭게 준비해야 한다.<br><br><br>
+        1970년 일본의 로봇공학자 마사히로 모리는 인간과의 유사성이 증가함에 따라 호감도가 증가하다가 어느 순간 급격히 떨어지는 '불쾌한 골짜기(uncanny valley)' 현상을 제안했다.
+        <img src="../../image/robot/20240501_03.jpg" alt="" width="100%">
+        이에 따르면 인조물의 유사성이 계속 높아지면 어느 순간 호감도가 떨어지면서 섬뜩함을 느끼게 되는데, 실제 인간과 같은 수준에 도달하면 호감도가 다시 상승한다는 것이다.<br><br>
+        최초의 산업용 로봇은 1954년 미국의 엔지니어 조지 데볼이 개발한 프로그래밍 가능한 유압식 로봇 팔 '유니메이트(Unimate)'였다. 1961년 유니메이션 사는 세계 최초의 산업용 로봇을 GM 공장에 공급했다. 1960-70년대에는 MIT와 스탠포드대에서 센서와 카메라를 활용한 보다 정교한 로봇 팔과 눈-손 협응 시스템을 연구했다. 초기에는 미국 기업이 산업용 로봇 시장을 주도했으나 1980년대 중반 이후 일본과 유럽 기업들이 로봇 산업을 선도하게 되었다.<br><br>
+        장난감 로봇은 오래전부터 존재해 왔지만, 1980-90년대에 들어서면서 마이크로프로세서를 탑재해 소리나 빛에 반응하고 음성을 인식하는 장난감 로봇이 인기를 끌었다. 1999년에는 소니가 강아지 모양의 로봇 아이보(AIBO)를 선보였는데, 20여개의 모터와 마이크, 카메라를 이용해 매우 생동감 있게 움직였다.<br><br>
+        로봇공학과 인공지능(AI) 분야의 연구는 밀접한 관련이 있다. 초기에는 기하학적 추론을 통해 로봇이 사물을 인식하고 동작을 계획하게 하려 했으나, 예측 못한 변수 때문에 자주 실패했다. 1980년대 중반 브룩스는 로봇에 내부 모델을 만들지 않고 단순한 감각-운동 연결만으로 곤충 같은 행동 패턴을 만들어냈다. 그러나 이는 소형 로봇에 국한된 것이었다.<br><br>
+        이후 연구자들은 다양한 기술을 통해 로봇이 주변 환경을 파악하고 자신의 움직임을 인식, 추적하는 방법을 모색했다. 특히 축구 로봇 대회인 로보컵은 이런 연구에 활기를 불어넣었다. 1990년대 고성능 마이크로프로세서 등장으로 대량의 센서 정보를 통계적으로 분석하거나, 자동 학습을 통해 상황을 판단하고 행동하는 기술이 발전했다.<br><br>
+        앞으로는 주변 환경을 인식하고 간단한 집안일을 수행하는 다목적 로봇이 개발될 것으로 보인다. 2030년경에는 훈련 가능한 쥐 수준의 지능을, 2040년경에는 원숭이 수준의 인지 능력을 가진 로봇이 등장할 수 있다. 21세기 중반에는 일반화와 추상화가 가능한 인간 수준의 로봇도 가능할 것으로 기대된다. 연구자들은 강력한 추론 프로그램을 3세대 로봇에 결합해 이를 구현하려 하고 있다.<br><br>
+        로봇기술의 발전은 인류에게 편의를 가져다줄 것이지만, 일자리 감소, 프라이버시 침해, 군사적 오용 등 여러 문제를 야기할 수 있어 사회적, 윤리적 논의가 필요하다. 미래의 로봇은 단순한 도구가 아니라 인간과 공존하며 소통하는 지적 동반자로 자리매김할 것이다. 우리는 로봇과 함께할 미래를 슬기롭게 준비해야 한다.<br><br><br>
 
         <a href="https://www.britannica.com/technology/robot-technology/The-future" target="_blank"> 2024년04월04일 : Robot technology   </a> <br>  
 
