Update robot sub 20240501_02.html

--- a/robot/robot sub 20240501_02.html
+++ b/robot/robot sub 20240501_02.html
@@ -121,7 +121,7 @@
         로봇 공학은 로봇이라 불리는 기계를 만들어내는 과학, 공학, 기술의 교차점입니다. 로봇은 인간의 행동을 모방하거나 대체하며, 기본적이고 반복적인 작업을 인간보다 더 효율적이고 정확하게 수행하여 제조업과 같은 산업에 이상적입니다. 하지만 인공지능이 로봇 공학에 도입되면서 로봇은 다양한 산업에서 점점 더 복잡한 상황을 처리할 수 있게 되었습니다.<br><br>
         로봇은 프로그래밍 가능한 기계로서 작업을 완료할 수 있는 반면, 로봇 공학이라는 용어는 로봇과 자동화 개발에 초점을 둔 연구 분야를 설명합니다. 각 로봇은 서로 다른 수준의 자율성을 가지고 있습니다. 이러한 수준은 인간이 제어하는 작업 수행 봇에서부터 외부 영향 없이 완전히 자율적으로 작업을 수행하는 봇에 이르기까지 다양합니다.<br><br>
         어원적으로 '로봇'이라는 단어는 "강제 노동"을 의미하는 체코어 robota에서 파생되었습니다. <br><br>
-        <img src="../../image/robot/20240501_02.jpg" alt="" width="100%">
+        <img src="../../image/robot/20240501_02.webp" alt="" width="100%">
         이 단어는 1920년 연극 R.U.R.에서 처음 등장했는데, 창의적 사고가 불가능한 대량 생산 노동자들을 지칭하는 데 사용되었습니다.<br><br>
         로봇의 기계적 측면은 설계된 환경에서 작업을 완수하는 데 도움을 줍니다. 예를 들어 화성 2020 탐사 로버의 바퀴는 개별적으로 모터로 구동되고 티타늄 튜브로 제작되어 붉은 행성의 거친 지형을 단단히 잡을 수 있습니다.<br><br>
         로봇은 기계를 제어하고 전력을 공급하는 전기 부품이 필요합니다. 기본적으로 대다수의 로봇에는 전지와 같은 전류가 필요합니다.<br><br>
