--- a/robot.html
+++ b/robot.html
@@ -150,7 +150,7 @@
         <li>
             <strong>Robot technology</strong><br>   
             <a href="robot/robot sub 20240501_03.html" target="_blank"> 2024년04월04일 로봇 바로가기<br><br>
-                <img src="image/robot/20240519_robot0.jpg" alt="" width="100%">
+                <img src="image/robot/20240501_03.jpg" alt="" width="100%">
             </a>
         </li>
           
